[gd_scene load_steps=4 format=3 uid="uid://bw5xq5nabgy78"]

[ext_resource type="Script" path="res://scripts/battle_monster_card.gd" id="1_23n1n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abbqp"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_0atfw"]
Panel/styles/panel = SubResource("StyleBoxFlat_abbqp")

[node name="BattleMonsterCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -648.0
offset_bottom = -516.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_23n1n")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0atfw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Monster
"

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "15/20
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
